--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bns-v2-sdk",
-  "version": "1.2.3",
+  "version": "1.3.3",
   "description": "The official BNS V2 SDK for interacting with Stacks Blockchain",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,28 +8,52 @@
     "build": "tsc",
     "clean": "rm -rf dist",
     "lint": "eslint src --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "BNS",
     "Stacks",
     "Blockchain",
-    "SDK"
+    "SDK",
+    "Names",
+    "NFT"
   ],
-  "author": "Pato",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^22.7.4",
-    "eslint": "^8.43.0",
-    "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
-  },
+  "author": "Strata Labs",
+  "license": "MIT",
   "dependencies": {
-    "@stacks/connect": "^7.7.1",
-    "dotenv": "^16.4.5"
-  }
+    "@stacks/common": "^6.0.0",
+    "@stacks/network": "^6.0.0",
+    "@stacks/transactions": "^6.0.0",
+    "axios": "^1.6.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "@types/node": "^20.8.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "eslint": "^8.50.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.2.2"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "files": [
+    "dist",
+    "src",
+    "README.md",
+    "LICENSE"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Strata-Labs/bns-v2-sdk.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Strata-Labs/bns-v2-sdk/issues"
+  },
+  "homepage": "https://github.com/Strata-Labs/bns-v2-sdk#readme"
 }
